working on create account window

--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="18" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
         Title="Reset Password" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -34,13 +34,13 @@
                     Margin="5" TextAlignment="Right" Padding="5" Text="New Password:" />
         <PasswordBox x:Name="newPasswordText" Grid.Column="2" Grid.Row="2"
                  Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
-                 PasswordChanged="newPasswordText_PasswordChanged"/>
+                 PasswordChanged="newPasswordText_PasswordChanged" MaxLength="20"/>
 
         <TextBlock Grid.Column="1" Grid.Row="3"
                    TextAlignment="Right" Padding="5" Text="Reenter Password:" />
         <PasswordBox x:Name="reenterPasswordText" Grid.Column="2" Grid.Row="3" 
                      PasswordChanged="reenterPasswordText_PasswordChanged"
-                 Padding="5" Width="250"/>
+                     Padding="5" Width="250" MaxLength="20"/>
 
         <TextBlock x:Name="invalidPasswordText" Grid.Column="2" Grid.Row="4" Text="Invalid Password"
                    Foreground="IndianRed" Visibility="Hidden" />
@@ -53,7 +53,7 @@
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
             <Button x:Name="cancelButton" 
-                Width="150" Margin="10" Content="Cancel" 
+                Width="150" Margin="10" Content="{ Binding Path=ReturnPage, Mode=TwoWay }" 
                 Click="cancelButton_Click" />
         </StackPanel>
     </Grid>
