--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Accounts.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Accounts.xaml
@@ -4,9 +4,90 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d"
-        Title="Accounts" Height="300" Width="300">
+        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+        Title="Create Account" Height="550" Width="600">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="20" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="20" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" 
+                   Margin="0,0,10,10" FontSize="36" Text="Create Account/Add Student" />
+
+        <StackPanel Margin = "10" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="6">
+            <TextBlock Text = "Select Account Type:" Margin = "5" />
+            <RadioButton x:Name = "teacher" Margin = "5" Checked = "teacher_Checked" 
+                         GroupName="AccountType" Content = "Teacher Account" />
+            <StackPanel x:Name="teacherAccount" Visibility="Collapsed">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Username: " TextAlignment="Right" Margin="5" Padding="5" Width="130"/>
+                    <TextBox x:Name="tUserNameText" Margin="4.667,0,5.333,4.667" Width="250" Height="38" 
+                         VerticalAlignment="Bottom" MaxLength="20" Text="{Binding Path=tUserName, Mode=TwoWay }"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Access Code: " TextAlignment="Right" Margin="5" Padding="5" Width="130"/>
+                    <TextBox x:Name="accessCodeText" Margin="4.667,0,5.333,4.667" Width="250" Height="38" 
+                         VerticalAlignment="Bottom" TextChanged="accessCodeText_TextChanged"
+                             Text="{ Binding Path=accessCode, Mode=TwoWay }"/>
+                </StackPanel>
+                <TextBlock x:Name="invalidAccessCodeText" Text="Invalid Access Code" Margin="5" Foreground="IndianRed" Visibility="Hidden"/>
+            </StackPanel>
+            <RadioButton x:Name = "parent" Margin = "5" Checked = "parent_Checked" 
+                         GroupName = "AccountType" Content = "Parent Account" />
+            <StackPanel x:Name="parentAccount" Visibility="Collapsed">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Username: " TextAlignment="Right" Margin="5" Padding="5" Width="130"/>
+                    <TextBox x:Name="pUserNameText" Margin="4.667,0,5.333,4.667" Width="250" Height="38" 
+                         VerticalAlignment="Bottom" MaxLength="20" Text="{ Binding Path=pUserName, Mode=TwoWay }"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Access Code: " TextAlignment="Right" Margin="5" Padding="5" Width="130"/>
+                    <TextBox x:Name="teacherCodeText" Margin="4.667,0,5.333,4.667" Width="250" Height="38" 
+                         VerticalAlignment="Bottom" TextChanged="teacherCodeText_TextChanged" Text="{ Binding Path=teacherCode, Mode=TwoWay }"/>
+                </StackPanel>
+                <TextBlock x:Name="invalidTeacherCodeText" Text="Invalid Teacher Code" Margin="5" Foreground="IndianRed" Visibility="Hidden"/>
+            </StackPanel>
+        </StackPanel>
+
+        <StackPanel Margin = "10" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4">
+            <TextBlock Text = "Add Student To Parent Account:" Margin = "5" />
+            <RadioButton x:Name = "addStudent" Margin = "0,5,4.667,5" Checked = "addStudent_Checked" 
+                         GroupName="AccountType" Content = "Add Student" HorizontalAlignment="Left" Width="441" />
+            <StackPanel x:Name="addStud" Visibility="Collapsed">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Teacher Code: " TextAlignment="Right" Margin="5" Padding="5" Width="130"/>
+                    <TextBox x:Name="addTeacherCodeText" Margin="4.667,0,5.333,4.667" Width="250" Height="38" 
+                         VerticalAlignment="Bottom" TextChanged="addTeacherCodeText_TextChanged"
+                             Text="{ Binding Path=teacherCode, Mode=TwoWay }"/>
+                </StackPanel>
+                <TextBlock x:Name="invalidAddTeacherCodeText" Text="Invalid Teacher Code" Margin="5" Foreground="IndianRed" Visibility="Hidden"/>
+            </StackPanel>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="5" 
+                    Orientation="Horizontal" Margin="0, 10">
+            <Button x:Name="submitButton"
+                Width="150" Margin="10" Content="Submit" Click="sumbitButton_Click" />
+            <Button x:Name="cancelButton" 
+                Width="150" Margin="10" Content="Cancel" Click="cancelButton_Click" />
+            <Button x:Name="logoutButton" 
+                Width="150" Margin="10" Content="Logout" Click="logoutButton_Click" />
+        </StackPanel>
     </Grid>
 </Window>
