--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="18" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
         Title="Create New Account" Height="400" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,7 +22,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
@@ -33,17 +33,20 @@
         <TextBlock Grid.Column="1" Grid.Row="2"
                     Margin="2.5" TextAlignment="Right" Padding="5" Text="Email:" />
         <TextBox x:Name="newEmailText" Grid.Column="2" Grid.Row="2"
-                 Margin="2.5, 5, 2.5, 2.5" Width="250" TextChanged="newEmailText_TextChanged"/>
+                 Margin="2.5, 5, 2.5, 2.5" Width="250" TextChanged="newEmailText_TextChanged"
+                 Text="{ Binding Path=email, Mode=TwoWay }"/>
 
         <TextBlock Grid.Column="1" Grid.Row="3"
                    Margin="2.5" TextAlignment="Right" Padding="5" Text="Password:" />
         <PasswordBox x:Name="newPasswordText" Grid.Column="2" Grid.Row="3"
-                 Margin="2.5" Padding="5" Width="250" PasswordChanged="newPasswordText_PasswordChanged"/>
+                 Margin="2.5" Padding="5" Width="250" PasswordChanged="newPasswordText_PasswordChanged"
+                     MaxLength="20"/>
 
         <TextBlock Grid.Column="1" Grid.Row="4"
                    Margin="2.5" TextAlignment="Right" Padding="5" Text="Reenter Password:" />
         <PasswordBox x:Name="reenterPasswordText" Grid.Column="2" Grid.Row="4"
-                 Margin="2.5" Padding="5" Width="250" PasswordChanged="reenterPasswordText_PasswordChanged"/>
+                 Margin="2.5" Padding="5" Width="250" PasswordChanged="reenterPasswordText_PasswordChanged"
+                     MaxLength="20"/>
 
         <TextBlock x:Name="invalidEmailText" Grid.Column="2" Grid.Row="5" Text="Invalid Email Address"
                    Foreground="IndianRed" Visibility="Hidden" />
