--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ForgotPassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ForgotPassword.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.ResetPassword"
+﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.ForgotPassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Reset Password" Height="475" Width="525">
+        mc:Ignorable="d" FontSize="18" FontFamily="Lucida Sans Unicode"
+        Title="Forgot Password" Height="400" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -23,27 +23,25 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="6" 
-                   Margin="0,0,10,10" FontSize="36" Text="Reset Password" />
-        <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="6" 
+        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" 
+                   Margin="0,0,10,10" FontSize="36" Text="Forgot Password" />
+        <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" 
                    Margin="0,0,10,10" FontSize="20" Text="Enter email to recieve code to reset password." />
-
+      
         <TextBlock Grid.Column="1" Grid.Row="3"
                     Margin="5" TextAlignment="Right" Padding="5" Text="Email:" />
         <TextBox x:Name="forgotEmailText" Grid.Column="2" Grid.Row="3"
                  Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
-                 TextChanged="forgotEmailText_TextChanged" Text="{ Binding Path=email, Mode=TwoWay }"/>
+                 TextChanged="forgotEmailText_TextChanged"/>
 
         <TextBlock x:Name="accessCodeVerify" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2"
                     Margin="5" Padding="5" Text="Access Code Sent" 
                     Foreground="ForestGreen" Visibility="Hidden"/>
-
+        
         <StackPanel Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5" 
                     Orientation="Horizontal" Margin="0, 10">
             <Button x:Name="sendButton"
@@ -57,14 +55,9 @@
         <TextBlock Grid.Column="1" Grid.Row="6"
                     Margin="5" TextAlignment="Right" Padding="5" Text="Code:" />
         <TextBox x:Name="codeText" Grid.Column="2" Grid.Row="6"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
-                 TextChanged="codeText_TextChanged" Text="{ Binding Path=code, Mode=TwoWay }"/>
-
-        <TextBlock x:Name="incorrectAccessCode" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2"
-                    Margin="5" Padding="5" Text="Incorrect Access Code or Email" 
-                    Foreground="IndianRed" Visibility="Hidden"/>
-
-        <Button x:Name="submitButton" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="2"
+                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" />
+      
+        <Button x:Name="submitButton" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2"
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
     </Grid>
