--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="18" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
         Title="School-To-Home Behavior Tracking Login" Height="350" Width="725">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -33,12 +33,13 @@
         <TextBlock Grid.Column="1" Grid.Row="2"
                     Margin="5" TextAlignment="Right" Padding="5" Text="Email:" />
         <TextBox x:Name="emailText" Grid.Column="2" Grid.Row="2"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" TextChanged="emailText_TextChanged"/>
+                 Margin="4.667,0,5.333,4.667" Width="250" Height="29" TextChanged="emailText_TextChanged"
+                 Text="{ Binding Path=email, Mode=TwoWay }"/>
 
         <TextBlock Grid.Column="1" Grid.Row="3"
                    TextAlignment="Right" Padding="5" Text="Password:" />
         <PasswordBox x:Name="passwordText" Grid.Column="2" Grid.Row="3" PasswordChanged="passwordText_PasswordChanged"
-                 Padding="5" Width="250"/>
+                 Padding="5" Width="250" MaxLength="20" />
 
         <TextBlock x:Name="invalidText" Grid.Column="2" Grid.Row="4" Text="Invalid Credentials"
                    Foreground="IndianRed" Visibility="Hidden" />
@@ -49,7 +50,7 @@
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
             <Button x:Name="cancelButton" 
-                Width="150" Margin="10" Content="Cancel" 
+                Width="150" Margin="10" Content="Exit" 
                 Click="cancelButton_Click" />
             <Button x:Name="forgotPasswordButton" 
                 Width="150" Margin="10" Content="Forgot Password" 
