--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Accounts.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Accounts.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.Accounts"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.Accounts"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Create Account" Height="550" Width="600">
+        Height="550" Width="600">
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -76,7 +77,7 @@
                          VerticalAlignment="Bottom" TextChanged="addTeacherCodeText_TextChanged"
                              Text="{ Binding Path=teacherCode, Mode=TwoWay }"/>
                 </StackPanel>
-                <TextBlock x:Name="invalidAddTeacherCodeText" Text="Invalid Teacher Code" Margin="5" Foreground="IndianRed" Visibility="Hidden"/>
+                <TextBlock x:Name="invalidAddTeacherCodeText" Text="Invalid/Duplicate Teacher Code" Margin="5" Foreground="IndianRed" Visibility="Hidden"/>
             </StackPanel>
         </StackPanel>
 
@@ -90,4 +91,4 @@
                 Width="150" Margin="10" Content="Logout" Click="logoutButton_Click" />
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
