--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.ChangePassword"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ChangePassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Reset Password" Height="350" Width="525">
+        Height="350" Width="525">
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -57,4 +58,4 @@
                 Click="cancelButton_Click" />
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
