--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.CreateAccount"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.CreateAccount"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Create New Account" Height="400" Width="525">
+        Height="400" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -67,4 +67,4 @@
                 Click="cancelAccountButton_Click" />
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
