--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/DeleteStudentVerify.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/DeleteStudentVerify.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.DeleteTeacherVerify"
+﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.DeleteStudentVerify"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d"
-        Title="Confirm Delete Teacher" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
-    
+         Title="Confirm Delete Student" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
+
     <Grid Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
