--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListStudents.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListStudents.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ParentDash"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ListStudents" 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:src="clr-namespace:SchoolToHomeBehaviorTracking_Client"
              xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-             mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-             d:DesignHeight="550" d:DesignWidth="600">
+             mc:Ignorable="d" 
+             d:DesignHeight="550" d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -29,17 +31,12 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <Button x:Name="logoutButton" Grid.Column="5" Grid.Row= "0" Grid.ColumnSpan="2" 
-                Content="Logout" HorizontalAlignment="Right" Margin="5,1" Click="logoutButton_Click"/>
-
-        <TextBlock x:Name="userNameText" Grid.Column="4" Grid.Row="1" Grid.ColumnSpan="3"
-                       Text="Welcome " HorizontalAlignment="Right" Margin="3, 0"/>
-        <TextBlock x:Name="loginText" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3"
-                       Text="Last Login: " HorizontalAlignment="Right" Margin="3, 0"/>
-        
-        <Button x:Name="p_newAccountButton" Grid.Column="3" Grid.Row="9" Grid.ColumnSpan="4" 
-                Content="Add Student/Account" HorizontalAlignment="Right" 
-                Margin="3" Click="newAccountButton_Click"/>
-    </Grid>
+       
+        <ScrollViewer Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8" Grid.RowSpan="8"
+                      VerticalScrollBarVisibility="Auto" MaxHeight="350">
+            <ListBox x:Name="studentList" Width="350"  ItemsSource="{Binding StudentNames}"
+                 BorderThickness="0" Margin="0,5,0,10" MouseUp="TextBlock_MouseUp">
+            </ListBox>
+     </ScrollViewer>
+ </Grid>
 </UserControl>
