--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.Login"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="School-To-Home Behavior Tracking Login" Height="350" Width="725">
+        Height="350" Width="725">
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -60,4 +61,4 @@
                 Click="createAccountButton_Click" />
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
