--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ResetPassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ResetPassword.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="SchoolToHomeBehaviorTracking_Client.ResetPassword"
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ResetPassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Reset Password" Height="475" Width="525">
-    <Grid>
+        Height="475" Width="525">
+    
+     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
             <ColumnDefinition Width="auto" />
@@ -68,4 +69,4 @@
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
     </Grid>
-</Window>
+</UserControl>
